--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "animate.css": "^4.1.1",
+    "axios": "^1.3.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1"
   }
 }
