--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-maps": "^9.4.5",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@types/leaflet": "^1.9.3",
     "@types/react-modal": "^3.13.1"
   },
   "type": "module"
