--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
@@ -27,6 +29,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.7.3",
     "typescript": "5.0.2"
   },
   "devDependencies": {
